--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,12 @@ jobs:
           TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
           git checkout -B gh-pages
-          
-          git rm -rf .
 
-          cp simulation.html index.html
-          cp simulation.js simulation.data simulation.wasm .
+          git checkout main -- simulation.html simulation.js simulation.data simulation.wasm
+
+          mv simulation.html index.html
+
+          git rm -rf .
 
           git add index.html simulation.js simulation.data simulation.wasm
 
